<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_500"
    >

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="@dimen/normalFontSize"
        android:textColor="?colorSecondary"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/everything_here_is_a_fact"
        android:textSize="@dimen/normalFontSize"
        android:layout_marginStart="@dimen/normalMargin"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        />
    <LinearLayout
        android:id="@+id/channelLink"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeHeight"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/t_me_f0ctt"
                android:textSize="@dimen/normalFontSize"
                android:layout_marginStart="@dimen/normalMargin"
                android:layout_marginTop="@dimen/smallMargin"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/invite_link"
                android:layout_marginTop="@dimen/tinyMargin"
                android:layout_marginStart="@dimen/normalMargin"
                android:layout_marginBottom="@dimen/smallMargin"
                android:textSize="@dimen/meduimFontSize"
                android:textColor="@color/gray" />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="@dimen/normalMargin"
            android:src="@drawable/baseline_qr_code_24"
            app:tint="@android:color/white"
            />
    </LinearLayout>
    <View
        android:id="@+id/hrDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividedHeight"
        android:layout_marginStart="@dimen/normalMargin"
        android:background="@color/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channelLink"
        />

    <LinearLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="@dimen/largeHeight"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hrDivider"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/notifications"
                android:textSize="@dimen/normalFontSize"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginStart="@dimen/normalMargin"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/off"
                android:layout_marginTop="@dimen/tinyMargin"
                android:layout_marginStart="@dimen/normalMargin"
                android:textSize="@dimen/meduimFontSize"
                android:layout_marginBottom="@dimen/smallMargin"
                android:textColor="@color/gray" />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <View
            android:layout_width="@dimen/dividWidth"
            android:layout_height="@dimen/meduimHeight"
            android:layout_margin="@dimen/smallMargin"
            android:background="@color/bg"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/my_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normalMargin"
            android:layout_marginBottom="@dimen/smallMargin"
            android:text="" />
    </LinearLayout>
    <View
        android:id="@+id/hrDivider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normalMargin"
        android:background="@color/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification"
        />
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue_700"
        app:tabTextColor="@color/gray"
        app:tabSelectedTextColor="@color/blue"
        app:tabGravity="fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hrDivider2"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        />
</androidx.constraintlayout.widget.ConstraintLayout>